# SimpleEngine

./: CMakeLists.txt  main.cpp
include/: Camera.hpp  Cube.hpp  InputHandler.hpp  Renderer.hpp  Shader.hpp  Window.hpp
include/colliders/: Collider.hpp  CubeCollider.hpp
include/meshes/: Circle.hpp  CircleMesh.hpp  Cube.hpp  CubeMesh.hpp  Mesh.hpp  Plane.hpp  PlaneMesh.hpp
include/objects/: Cube.hpp  Object.hpp  Plane.hpp  Player.hpp
include/rooms/: BasicRoom.hpp  Room.hpp
shaders/: fragmentShader.glsl
src/: Camera.cpp  Cube.cpp  InputHandler.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
src/colliders/: CubeCollider.cpp
src/meshes/: Circle.cpp  CircleMesh.cpp  Cube.cpp  CubeMesh.cpp  Mesh.cpp  Plane.cpp  PlaneMesh.cpp
src/objects/: Cube.cpp  Plane.cpp  Player.cpp
src/rooms/: BasicRoom.cpp
src/shaders/: fragment.glsl
